--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,18 +26,21 @@ header{
     font-size: 27px;
     font-weight: 400;
     margin-top: 42px;
+    margin-right: 300px;
     position: sticky;
     top: 0px;
     z-index: 1;
+    width: 1920px;
 }
 header ul{
     height: 69px;
     display: inline-flex;
     list-style: none;
     margin: 0px;
-    padding-inline: 84px;
+    padding-inline-end: 100px;
     background-image: url(/src/Image/Header/BackGround.svg);
     background-repeat: no-repeat;
+    width: 900px;
 }
 header ul li{
     padding-top: 16px;
@@ -47,12 +50,14 @@ header ul li a{
     text-decoration: none;
     padding-inline: 70px;
 }
-header button{
+.head-button{
+    margin-left: 40px;
     background-image: url(/src/Icons/logo.svg);
     display: inline-flex;
-    margin-inline: 25px;
     width: 72px;
     height: 60px;
+    background-color: transparent;
+    border: 0px;
 }
 h1{
     font-size: 60px;
@@ -122,6 +127,18 @@ h1{
 }
 .Header--2{
     width: initial;
+}
+.btn-1{
+    width: 200px;
+    padding-bottom: 6px;
+    font-family: Montserrat;
+    font-size: 28px;
+    color: black;
+    margin-top: auto;
+    margin-bottom: auto;
+    border: none;
+    background-repeat: no-repeat;
+    background-color: transparent;
 }
 
 
